edit basic function, not 1.0 ver

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,15 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_employee_detail">EmployeeDetailActivity</string>
+    <string name="title_activity_memo">MemoActivity</string>
+    <string name="login_activity" translatable="false">로그인</string>
+    <string name="change_password_activity" translatable="false">비밀번호 변경</string>
+
+    <string name="prompt_password" translatable="false">Password</string>
+    <string name="prompt_password_confirm" translatable="false">Password Confirm</string>
+    <string name="prompt_email" translatable="false">Email</string>
+
+    <string name="action_sign_in" translatable="false">Sign in or register</string>
+    <string name="action_sign_in_short" translatable="false">Sign in</string>
+    <string name="action_change_password" translatable="false">Change Password</string>
 </resources>
