--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="change_password_activity">비밀번호 변경</string>
 
     <string name="prompt_password">비밀번호</string>
-    <string name="prompt_password_confirm">Password Confirm</string>
+    <string name="prompt_password_confirm">비밀번호 확인</string>
     <string name="prompt_email">이메일 주소</string>
 
     <string name="action_sign_in">로그인</string>
