--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,11 +38,22 @@
 
     <string name="server_error">서버 통신에 에러가 발생하였습니다.</string>
     <string name="alert_delete">삭제하시겠습니까</string>
+    <string name="ok">확인</string>
+    <string name="delete">삭제</string>
+    <string name="keep">유지 </string>
+    <string name="close">닫기</string>
+    <string name="cancel">취소</string>
     <string name="add">등록</string>
     <string name="update">수정</string>
     <string name="hint_category">카테고리를 선택해주세요.</string>
     <string name="hint_title">제목을 입력해주세요.</string>
     <string name="hint_contents">내용을 입력해주세요.</string>
+    <string name="hint_id_password">아이디와 비밀번호를 입력해주세요.</string>
+    <string name="hint_comment">댓글을 입력해주세요.</string>
+    <string name="hint_password">비밀번호를 입력해주세요.</string>
+    <string name="hint_password_password_confirm">비밀번호와 비밀번호 확인을 모두 입력해주세요.</string>
+    <string name="check_password">비밀번호를 확인해주세요.</string>
+    <string name="inconsistency_password">비밀번호가 서로 일치하지 않습니다.</string>
 
 
     <string name="memo_add">메모가 추가 되었습니다.</string>
@@ -51,6 +62,13 @@
     <string name="permission_call_ok">전화 권한이 허용되었습니다.</string>
     <string name="permission_call_fail">전화 권한을 허용해주세요.</string>
 
+    <string name="extension_num_header">07046725</string>
 
+    <!--데이터 저장에 사용하는 KEY 값-->
+    <string name="PREF_USER_ID">PREF_USER_ID</string>
+    <string name="USER_ID">USER_ID</string>
+    <string name="BOARD_ID">BOARD_ID</string>
+    <string name="DEPARTMENT_ID">DEPARTMENT_ID</string>
+    <string name="EMPLOYEE_ID">EMPLOYEE_ID</string>
 
 </resources>
