--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,7 @@
     <string name="hint_employees_search">검색할 이름을 입력해주세요.</string>
 
 
-    <string name="category_id_notice">6797f061-c997-11ea-9982-20cf305809b8</string>
-    <string name="user_id_dummy">d204d659-c1e2-11ea-9982-20cf305809b8</string>
+
 
     <string name="server_error">서버 통신에 에러가 발생하였습니다.</string>
     <string name="alert_delete">삭제하시겠습니까</string>
@@ -43,8 +42,11 @@
     <string name="keep">유지 </string>
     <string name="close">닫기</string>
     <string name="cancel">취소</string>
+    <string name="back">뒤로</string>
     <string name="add">등록</string>
+    <string name="more">더보기</string>
     <string name="update">수정</string>
+    <string name="save">저장</string>
     <string name="hint_category">카테고리를 선택해주세요.</string>
     <string name="hint_title">제목을 입력해주세요.</string>
     <string name="hint_contents">내용을 입력해주세요.</string>
@@ -53,6 +55,7 @@
     <string name="hint_password">비밀번호를 입력해주세요.</string>
     <string name="hint_password_password_confirm">비밀번호와 비밀번호 확인을 모두 입력해주세요.</string>
     <string name="check_password">비밀번호를 확인해주세요.</string>
+    <string name="change_password_ok">비밀번호가 변경되었습니다.</string>
     <string name="inconsistency_password">비밀번호가 서로 일치하지 않습니다.</string>
 
 
@@ -64,11 +67,22 @@
 
     <string name="extension_num_header">07046725</string>
 
+
+    <string name="tab_title_departments">조직 현황</string>
+    <string name="tab_title_notice">공지사항</string>
+    <string name="tab_title_freeboard">자유게시판</string>
+
     <!--데이터 저장에 사용하는 KEY 값-->
     <string name="PREF_USER_ID">PREF_USER_ID</string>
     <string name="USER_ID">USER_ID</string>
     <string name="BOARD_ID">BOARD_ID</string>
     <string name="DEPARTMENT_ID">DEPARTMENT_ID</string>
     <string name="EMPLOYEE_ID">EMPLOYEE_ID</string>
+    <string name="PROFILE_URL">PROFILE_URL</string>
+
+    <!--CATEGORY_ID-->
+    <string name="CATEGORY_ID_NOTICE">6797f061-c997-11ea-9982-20cf305809b8</string>
+    <string name="CATEGORY_ID_CONGRATULATION">38509e8c-cb37-11ea-9982-20cf305809b8</string>
+    <string name="CATEGORY_ID_FREE_BOARD">c95b5e80-d0d5-11ea-9982-20cf305809b8</string>
 
 </resources>
